<resources>
    <string name="app_name">Score</string>
    <string name="teamATitle">Team A</string>
    <string name="teamBTitle">Team B</string>
    <string name="scoreA" translatable="false">0</string>
    <string name="scoreB" translatable="false">0</string>
    <string name="button1" translatable="false">+1</string>
    <string name="button2" translatable="false">+2</string>
    <string name="button3" translatable="false">+3</string>
    <string name="refresh">refresh</string>
    <string name="undo">undo</string>
</resources>
